Updated CM boilderplate

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -5,6 +5,10 @@ $white: #ffffff;
 $black : #000000;
 $red : #ff0000;
 
+unsubscribe {
+    color: $white;
+}
+
 @mixin heading-brand {
     font-weight: 700;
     color: $orange;
