--- a/css/custom.scss
+++ b/css/custom.scss
@@ -70,12 +70,12 @@ th.large-12.horizontal-rule {
 
 @media only screen and (max-width: 596px) {
     #top-bar { 
-        th.small-12 {
+/*         th.small-12 {
             padding-bottom: 0!important;
             th.menu-item {
                  padding-top: 0!important;
             }
-        }
+        } */
     }
 }
 
