Made css changes after testing.

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -27,16 +27,18 @@ p {
 }
 
 th.large-12.horizontal-rule {
-    padding-bottom: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
     .horizontal-rule-line {
-         border-top-color: $orange;
-         border-bottom-color: $orange;
-         border-left-color: $orange;
-         border-right-color: $orange;
-         border-top-style:solid;
-         border-bottom-style:solid;
-         border-left-style:solid;
-         border-right-style:solid;
+         border-top-color: $orange !important;
+         border-bottom-color: $orange !important;
+         border-left-color: $orange !important;
+         border-right-color: $orange !important;
+         border-top-style:solid !important;
+         border-bottom-style:solid !important;
+         border-left-style:solid !important;
+         border-right-style:solid !important;
     }
 }
 
@@ -71,13 +73,19 @@ th.large-12.horizontal-rule {
 
         a, tweet, fblike, forwardtoafriend {
             display: inline-block;
-            margin-left: 10px;
+            padding-left: 10px;
         }
     }
 
     .pipe {
         padding-left: 5px;
         padding-right: 5px;
+    }
+
+    @media only screen and (max-width: 596px) {
+        .first {
+            padding-bottom: 0!important;
+        }
     }
 }
 
