Updated spacers for outlook.

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -57,7 +57,7 @@ th.large-12.horizontal-rule {
     }
 
     #top-socials {
-        padding-top: 5px;
+        //padding-top: 5px;
         padding-bottom: 0;
         padding-right: 0;
 
