--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,156 @@
-unsubscribe{color:#fff}.heading-brand{font-weight:700;color:#F5A623}h6{font-size:16px}p{font-size:12px}th.large-12.horizontal-rule{padding-top:5px;padding-bottom:5px}th.large-12.horizontal-rule .horizontal-rule-line{border-top-color:#F5A623 !important;border-bottom-color:#F5A623 !important;border-left-color:#F5A623 !important;border-right-color:#F5A623 !important;border-top-style:solid !important;border-bottom-style:solid !important;border-left-style:solid !important;border-right-style:solid !important}.horizontal-rule-line-red{border-top-color:red;border-bottom-color:red;border-left-color:red;border-right-color:red;border-top-style:solid;border-bottom-style:solid;border-left-style:solid;border-right-style:solid}#footer-bar,#top-bar{background-color:#7ED321}#footer-bar .menu-item,#footer-bar .menu-item a,#footer-bar .menu-item webversion,#footer-bar .menu-item preferences,#footer-bar .menu-item unsubscribe,#top-bar .menu-item,#top-bar .menu-item a,#top-bar .menu-item webversion,#top-bar .menu-item preferences,#top-bar .menu-item unsubscribe{color:#fff;font-size:10px}#footer-bar #top-socials,#top-bar #top-socials{padding-top:5px;padding-bottom:0;padding-right:0}#footer-bar #top-socials a,#footer-bar #top-socials tweet,#footer-bar #top-socials fblike,#footer-bar #top-socials forwardtoafriend,#top-bar #top-socials a,#top-bar #top-socials tweet,#top-bar #top-socials fblike,#top-bar #top-socials forwardtoafriend{display:inline-block;padding-left:10px}#footer-bar .pipe,#top-bar .pipe{padding-left:5px;padding-right:5px}@media only screen and (max-width: 596px){#footer-bar .first,#top-bar .first{padding-bottom:0 !important}}.three-column-content .editable-content .heading-brand{font-size:14px}.three-column-content .editable-content p{font-size:10px}
+unsubscribe {
+    color: #ffffff;
+  }
+  
+  .heading-brand {
+    font-weight: 700;
+    color: #F5A623;
+  }
+  
+  h6 {
+    font-size: 16px;
+  }
+  
+  p {
+    font-size: 12px;
+  }
+  
+  table.button {
+    margin: 0 0 16px 0;
+    Margin: 0 0 16px 0;
+    border: 1px solid #7ED321;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0 0 16px 0;
+    padding: 0;
+    text-align: center;
+    vertical-align: top;
+    width: 150px;
+  }
+  table.button tr {
+    padding: 0;
+    text-align: left;
+    vertical-align: top;
+  }
+  table.button tr table td {
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    margin: 0;
+    Margin: 0;
+    background: #ffffff;
+    border: none;
+    border-collapse: collapse !important;
+    color: #7ED321;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    hyphens: auto;
+    line-height: 1.3;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    vertical-align: top;
+    word-wrap: break-word;
+  }
+  table.button:hover table td {
+    background: #ffffff;
+    background-color: #ffffff;
+  }
+  
+  table.button table td a.button-link {
+    margin: 0;
+    Margin: 0;
+    border: 0 solid #7ED321;
+    border-radius: 3px;
+    color: #7ED321;
+    display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: light;
+    line-height: 1.3;
+    margin: 0;
+    padding: 8px 25px 8px 25px;
+    text-align: left;
+    text-decoration: none;
+  }
+  table.button table td a.button-link:link, table.button table td a.button-link:visited, table.button table td a.button-link:hover, table.button table td a.button-link:active {
+    color: #7ED321;
+    background: #ffffff;
+    background-color: #ffffff;
+  }
+  
+  th.large-12.horizontal-rule {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  th.large-12.horizontal-rule .horizontal-rule-line {
+    border-top-color: #F5A623 !important;
+    border-bottom-color: #F5A623 !important;
+    border-left-color: #F5A623 !important;
+    border-right-color: #F5A623 !important;
+    border-top-style: solid !important;
+    border-bottom-style: solid !important;
+    border-left-style: solid !important;
+    border-right-style: solid !important;
+  }
+  
+  .horizontal-rule-line-red {
+    border-top-color: #ff0000;
+    border-bottom-color: #ff0000;
+    border-left-color: #ff0000;
+    border-right-color: #ff0000;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-right-style: solid;
+  }
+  
+  #footer-bar,
+  #top-bar {
+    background-color: #7ED321;
+  }
+  #footer-bar .menu-item,
+  #footer-bar .menu-item a,
+  #footer-bar .menu-item webversion,
+  #footer-bar .menu-item preferences,
+  #footer-bar .menu-item unsubscribe,
+  #top-bar .menu-item,
+  #top-bar .menu-item a,
+  #top-bar .menu-item webversion,
+  #top-bar .menu-item preferences,
+  #top-bar .menu-item unsubscribe {
+    color: #ffffff;
+    font-size: 10px;
+  }
+  #footer-bar #top-socials,
+  #top-bar #top-socials {
+    padding-top: 5px;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+  #footer-bar #top-socials a, #footer-bar #top-socials tweet, #footer-bar #top-socials fblike, #footer-bar #top-socials forwardtoafriend,
+  #top-bar #top-socials a,
+  #top-bar #top-socials tweet,
+  #top-bar #top-socials fblike,
+  #top-bar #top-socials forwardtoafriend {
+    display: inline-block;
+    padding-left: 10px;
+  }
+  #footer-bar .pipe,
+  #top-bar .pipe {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  @media only screen and (max-width: 596px) {
+    #footer-bar .first,
+  #top-bar .first {
+      padding-bottom: 0 !important;
+    }
+  }
+  
+  .three-column-content .editable-content .heading-brand {
+    font-size: 14px;
+  }
+  .three-column-content .editable-content p {
+    font-size: 10px;
+  }
