--- a/css/custom.scss
+++ b/css/custom.scss
@@ -26,6 +26,80 @@ p {
     font-size: 12px;
 }
 
+table.button {
+    margin:0 0 16px 0; 
+    Margin:0 0 16px 0; 
+    border:1px solid $lime;
+    border-collapse:collapse;
+    border-spacing:0;
+    margin:0 0 16px 0;
+    padding:0;
+    text-align:center;
+    vertical-align:top;
+    width:150px;
+
+    tr {
+        padding:0;
+        text-align:left;
+        vertical-align:top;
+    
+        table td {
+            -moz-hyphens:auto;
+            -webkit-hyphens:auto;
+            margin:0; 
+            Margin:0;
+            background:$white;
+            border:none;
+            border-collapse:collapse!important;
+            color:$lime;
+            font-family:Helvetica,Arial,sans-serif;
+            font-size:16px;
+            font-weight:400;
+            hyphens:auto;
+            line-height:1.3;
+            margin:0;
+            padding:0;
+            text-align:center;
+            vertical-align:top;
+            word-wrap:break-word;
+        }
+    }
+
+    &:hover {
+        table td {
+            background: $white;
+            background-color: $white;
+        }
+    }
+}
+
+table.button table td a.button-link {
+    margin:0; 
+    Margin:0; 
+    border:0 solid $lime;
+    border-radius:3px;
+    color:$lime;
+    display:inline-block;
+    font-family:Helvetica,Arial,sans-serif;
+    font-size:16px;
+    font-weight:light;
+    line-height:1.3;
+    margin:0;
+    padding:8px 25px 8px 25px;
+    text-align:left;
+    text-decoration:none;
+
+    &:link,
+    &:visited,
+    &:hover,
+    &:active {
+        color: $lime;
+        background: $white;
+        background-color: $white;
+    }
+}
+
+
 th.large-12.horizontal-rule {
     padding-top: 5px;
     padding-bottom: 5px;
