--- a/css/custom.css
+++ b/css/custom.css
@@ -1,63 +1,1 @@
-.heading-brand {
-  font-weight: 700;
-  color: #F5A623; }
-
-h6 {
-  font-size: 16px; }
-
-p {
-  font-size: 12px; }
-
-th.large-12.horizontal-rule {
-  padding-bottom: 0; }
-  th.large-12.horizontal-rule .horizontal-rule-line {
-    border-top-color: #F5A623;
-    border-bottom-color: #F5A623;
-    border-left-color: #F5A623;
-    border-right-color: #F5A623;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-left-style: solid;
-    border-right-style: solid; }
-
-.horizontal-rule-line-red {
-  border-top-color: #ff0000;
-  border-bottom-color: #ff0000;
-  border-left-color: #ff0000;
-  border-right-color: #ff0000;
-  border-top-style: solid;
-  border-bottom-style: solid;
-  border-left-style: solid;
-  border-right-style: solid; }
-
-#footer-bar,
-#top-bar {
-  background-color: #7ED321; }
-  #footer-bar .menu-item, #footer-bar .menu-item a,
-  #top-bar .menu-item,
-  #top-bar .menu-item a {
-    color: #ffffff;
-    font-size: 10px; }
-  #footer-bar #top-socials,
-  #top-bar #top-socials {
-    padding-bottom: 0;
-    padding-right: 0; }
-    #footer-bar #top-socials a, #footer-bar #top-socials tweet, #footer-bar #top-socials forwardtoafriend,
-    #top-bar #top-socials a,
-    #top-bar #top-socials tweet,
-    #top-bar #top-socials forwardtoafriend {
-      display: inline-block;
-      padding-left: 10px; }
-  #footer-bar .pipe,
-  #top-bar .pipe {
-    padding-left: 5px;
-    padding-right: 5px; }
-  @media only screen and (max-width: 596px) {
-    #footer-bar .first,
-    #top-bar .first {
-      padding-bottom: 0 !important; } }
-
-.three-column-content .editable-content .heading-brand {
-  font-size: 14px; }
-.three-column-content .editable-content p {
-  font-size: 10px; }
+.heading-brand{font-weight:700;color:#F5A623}h6{font-size:16px}p{font-size:12px}th.large-12.horizontal-rule{padding-bottom:0}th.large-12.horizontal-rule .horizontal-rule-line{border-top-color:#F5A623;border-bottom-color:#F5A623;border-left-color:#F5A623;border-right-color:#F5A623;border-top-style:solid;border-bottom-style:solid;border-left-style:solid;border-right-style:solid}.horizontal-rule-line-red{border-top-color:red;border-bottom-color:red;border-left-color:red;border-right-color:red;border-top-style:solid;border-bottom-style:solid;border-left-style:solid;border-right-style:solid}#footer-bar,#top-bar{background-color:#7ED321}#footer-bar .menu-item,#footer-bar .menu-item a,#top-bar .menu-item,#top-bar .menu-item a{color:#fff;font-size:10px}#footer-bar #top-socials,#top-bar #top-socials{padding-bottom:0;padding-right:0}#footer-bar #top-socials a,#footer-bar #top-socials tweet,#footer-bar #top-socials forwardtoafriend,#top-bar #top-socials a,#top-bar #top-socials tweet,#top-bar #top-socials forwardtoafriend{display:inline-block;padding-left:10px}#footer-bar .pipe,#top-bar .pipe{padding-left:5px;padding-right:5px}@media only screen and (max-width: 596px){#footer-bar .first,#top-bar .first{padding-bottom:0 !important}}.three-column-content .editable-content .heading-brand{font-size:14px}.three-column-content .editable-content p{font-size:10px}.blick-btn{background-color:#fff;border:2px solid #7ED321}.blick-btn td{color:#7ED321;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:bold;letter-spacing:-.5px;line-height:150%;padding-top:0px;padding-right:0px;text-align:center;padding-bottom:0px;padding-left:0px}.blick-btn td a{text-align:center;color:#7ED321;display:inline-block;width:100%;margin:auto;text-decoration:none;padding-left:0;padding-right:0;padding-top:15px;padding-bottom:15px}
