Updates to mailchimp template.

--- a/css/custom.css
+++ b/css/custom.css
@@ -61,3 +61,24 @@ th.large-12.horizontal-rule {
   font-size: 14px; }
 .three-column-content .editable-content p {
   font-size: 10px; }
+
+table.button {
+  border: 1px solid #7ED321;
+  margin: 0 0 16px 0;
+  border-collapse: collapse;
+  border-spacing: 0;
+  padding: 0;
+  text-align: center;
+  vertical-align: top;
+  width: 100%;
+  max-width: 170px;
+  color: #7ED321;
+  cursor: pointer; }
+  table.button:hover td table td a {
+    color: #7ED321; }
+  table.button td table td a {
+    color: #7ED321;
+    cursor: pointer; }
+    table.button td table td a:hover {
+      color: #7ED321;
+      text-decoration: underline; }
