--- a/css/custom.scss
+++ b/css/custom.scss
@@ -89,3 +89,44 @@ th.large-12.horizontal-rule {
         }
     }
 }
+
+table.button {
+    border:1px solid $lime;
+    margin:0 0 16px 0;
+    border-collapse:collapse;
+    border-spacing:0;
+    padding:0;
+    text-align:center;
+    vertical-align:top; 
+    width:100%;
+    max-width:170px;
+    color: $lime;
+    cursor: pointer;
+    &:hover{
+         td {
+            table {
+                td {
+                    a{
+                        color: $lime;
+                    }
+                }
+            }
+        }
+    }
+
+    td {
+        table {
+            td {
+                a{
+                    color: $lime;
+                    cursor: pointer;
+                    &:hover {
+                        color: $lime;
+                        text-decoration: underline;
+
+                    }
+                }
+            }
+        }
+    }
+}
