--- a/css/custom.scss
+++ b/css/custom.scss
@@ -139,7 +139,7 @@ table.button {
         color: $lime;
         font-family: Helvetica, Arial, sans-serif;
         font-size: 16px;
-        font-weight: bold;
+        font-weight: 500;        
         letter-spacing: -.5px;
         line-height: 150%;
         padding-top: 0px;
@@ -147,6 +147,10 @@ table.button {
         text-align: center;
         padding-bottom: 0px;
         padding-left: 0px;
+
+        .tpl-content {
+            padding: 0;
+        }
 
         a {
             text-align: center;
@@ -159,6 +163,7 @@ table.button {
             padding-right: 0;
             padding-top: 15px;
             padding-bottom: 15px;
+            font-weight: 500;
         }
     }
 }
